--- a/public/office.html
+++ b/public/office.html
@@ -12,7 +12,7 @@
       --muted:#6b7280; --border:#e5e7eb;
       --shadow: 0 10px 25px rgba(0,0,0,0.08);
       --radius: 18px;
-    }
+    }Good evening, Ma’am Margie. Sharing the link to the Calendar of Activities for the Innovations Division for your review and approval. Pre-deployment pa ni. Thank you.
     *{ box-sizing:border-box; }
     body{ margin:0; font-family: Arial, sans-serif; background: var(--bg); color: var(--text); }
 
