--- a/public/office.html
+++ b/public/office.html
@@ -12,11 +12,12 @@
       --muted:#6b7280; --border:#e5e7eb;
       --shadow: 0 10px 25px rgba(0,0,0,0.08);
       --radius: 18px;
-    }Good evening, Ma’am Margie. Sharing the link to the Calendar of Activities for the Innovations Division for your review and approval. Pre-deployment pa ni. Thank you.
+      --highlight: rgba(0, 86, 214, 0.12);
+      --highlightBorder: rgba(0, 86, 214, 0.45);
+    }
     *{ box-sizing:border-box; }
     body{ margin:0; font-family: Arial, sans-serif; background: var(--bg); color: var(--text); }
 
-    /* Topbar */
     .topbar{
       position: sticky; top:0; z-index: 10;
       background: linear-gradient(90deg, var(--primary), var(--primary2));
@@ -28,11 +29,7 @@
       display:flex; align-items:center; justify-content: space-between;
       gap: 14px;
     }
-
-    .brand{
-      display:flex; align-items:center; gap: 12px;
-      min-width: 280px;
-    }
+    .brand{ display:flex; align-items:center; gap: 12px; min-width: 280px; }
     .logos{ display:flex; align-items:center; gap: 10px; }
     .logo{
       height: 38px; width: 38px;
@@ -43,9 +40,7 @@
     }
     .brand-text h1{ margin:0; font-size: 18px; font-weight: 900; }
     .brand-text p{ margin:2px 0 0; font-size: 13px; opacity: .95; font-weight: 800; }
-
     .right-tools{ display:flex; align-items:center; gap: 10px; }
-
     .user-pill{
       display:flex; align-items:center; gap:10px;
       background: rgba(255,255,255,0.14);
@@ -61,7 +56,6 @@
       background:#22c55e;
       box-shadow: 0 0 0 3px rgba(34,197,94,0.22);
     }
-
     .logout-btn{
       border: 1px solid rgba(255,255,255,0.35);
       background: rgba(255,255,255,0.14);
@@ -71,14 +65,8 @@
       border-radius: 999px;
       cursor:pointer;
     }
-    .logout-btn:hover{ filter: brightness(0.96); }
 
-    /* Layout */
-    .wrap{
-      max-width: 1400px;
-      margin: 22px auto;
-      padding: 0 14px;
-    }
+    .wrap{ max-width: 1400px; margin: 22px auto; padding: 0 14px; }
     .card{
       background: var(--card);
       border: 1px solid var(--border);
@@ -86,50 +74,16 @@
       box-shadow: var(--shadow);
       padding: 18px;
     }
+    .header-row{ display:flex; align-items:flex-end; justify-content: space-between; gap: 12px; flex-wrap: wrap; }
+    .header-row h2{ margin:0; font-size: 30px; font-weight: 900; color:#0f172a; }
 
-    .header-row{
-      display:flex;
-      align-items:flex-end;
-      justify-content: space-between;
-      gap: 12px;
-      flex-wrap: wrap;
-    }
-    .header-row h2{
-      margin:0;
-      font-size: 30px;
-      font-weight: 900;
-      color:#0f172a;
-    }
+    .center-title{ width:100%; text-align:center; margin-top: 10px; }
+    .center-title h3{ margin: 0; color: var(--primary); font-size: 24px; font-weight: 900; letter-spacing: .3px; }
+    .center-title p{ margin: 6px 0 0; color: var(--muted); font-weight: 800; font-size: 13px; }
 
-    .center-title{
-      width:100%;
-      text-align:center;
-      margin-top: 10px;
-    }
-    .center-title h3{
-      margin: 0;
-      color: var(--primary);
-      font-size: 24px;
-      font-weight: 900;
-      letter-spacing: .3px;
-    }
-    .center-title p{
-      margin: 6px 0 0;
-      color: var(--muted);
-      font-weight: 800;
-      font-size: 13px;
-    }
-
-    .controls{
-      display:flex;
-      gap: 12px;
-      align-items:center;
-      margin-top: 14px;
-      flex-wrap: wrap;
-    }
+    .controls{ display:flex; gap: 12px; align-items:center; margin-top: 14px; flex-wrap: wrap; }
     .input{
-      flex: 1;
-      min-width: 280px;
+      flex: 1; min-width: 280px;
       border: 1px solid var(--border);
       border-radius: 999px;
       padding: 12px 16px;
@@ -138,8 +92,7 @@
       background:#fff;
     }
     .btn{
-      border: none;
-      border-radius: 999px;
+      border: none; border-radius: 999px;
       padding: 12px 18px;
       background: var(--primary);
       color: white;
@@ -150,9 +103,7 @@
       align-items:center;
       gap:10px;
     }
-    .btn:hover{ filter: brightness(0.96); }
 
-    /* Two columns layout */
     .grid{
       display:grid;
       grid-template-columns: 380px 1fr;
@@ -167,13 +118,7 @@
       border-radius: 16px;
       padding: 14px;
     }
-
-    .panel h4{
-      margin: 0 0 10px;
-      font-size: 16px;
-      font-weight: 900;
-      color:#0f172a;
-    }
+    .panel h4{ margin: 0 0 10px; font-size: 16px; font-weight: 900; color:#0f172a; }
 
     .mini-card{
       border:1px solid var(--border);
@@ -182,17 +127,8 @@
       background:#fbfdff;
       margin-bottom: 10px;
     }
-    .mini-card .k{
-      color: var(--muted);
-      font-weight: 800;
-      font-size: 12px;
-    }
-    .mini-card .v{
-      font-weight: 900;
-      font-size: 13px;
-      margin-top: 2px;
-      word-break: break-word;
-    }
+    .mini-card .k{ color: var(--muted); font-weight: 800; font-size: 12px; }
+    .mini-card .v{ font-weight: 900; font-size: 13px; margin-top: 2px; word-break: break-word; }
 
     .updated-badge{
       margin-top: 10px;
@@ -208,16 +144,8 @@
       gap:8px;
     }
 
-    .field{
-      margin-top: 10px;
-    }
-    .field label{
-      display:block;
-      font-size: 12px;
-      font-weight: 900;
-      margin-bottom: 6px;
-      color:#0f172a;
-    }
+    .field{ margin-top: 10px; }
+    .field label{ display:block; font-size: 12px; font-weight: 900; margin-bottom: 6px; color:#0f172a; }
     .field input, .field select, .field textarea{
       width:100%;
       border:1px solid var(--border);
@@ -229,12 +157,7 @@
     }
     .field textarea{ min-height: 70px; resize: vertical; }
 
-    .save-row{
-      margin-top: 12px;
-      display:flex;
-      gap: 10px;
-      justify-content:flex-end;
-    }
+    .save-row{ margin-top: 12px; display:flex; gap: 10px; justify-content:flex-end; }
     .save-btn{
       width:100%;
       border:none;
@@ -247,7 +170,6 @@
       box-shadow: 0 6px 14px rgba(0,51,160,0.22);
     }
 
-    /* Table */
     .table-wrap{
       overflow:auto;
       border-radius: 16px;
@@ -256,7 +178,8 @@
     }
     table{
       width:100%;
-      border-collapse: collapse;
+      border-collapse: separate;
+      border-spacing: 0;
       min-width: 850px;
       background:#fff;
     }
@@ -265,6 +188,7 @@
       border-bottom: 1px solid var(--border);
       font-size: 13px;
       vertical-align: top;
+      background:#fff;
     }
     th{
       background: #f3f7ff;
@@ -276,8 +200,8 @@
       font-weight: 900;
     }
     .muted{ color: var(--muted); font-weight: 800; }
-
     .clickable{ cursor:pointer; }
+
     .mini-btn{
       border:none;
       background:#eaf2ff;
@@ -302,13 +226,21 @@
     .tag-updated{ background:#e8fff1; border-color:#86efac; color:#166534; }
     .tag-new{ background:#f3f4f6; color:#6b7280; }
 
+    /* ✅ highlight selected row */
+    tr.row-selected td{
+      background: var(--highlight) !important;
+      border-bottom-color: var(--highlightBorder) !important;
+    }
+    tr.row-selected td:first-child{
+      box-shadow: inset 4px 0 0 var(--primary);
+    }
+
     @media (max-width: 1100px){
       .grid{ grid-template-columns: 1fr; }
       table{ min-width: 700px; }
     }
   </style>
 
-  <!-- ✅ AUTH GUARD (Office) -->
   <script>
     (function () {
       const email = localStorage.getItem("email");
@@ -321,7 +253,6 @@
         location.replace("index.html");
         return;
       }
-
       if (role !== "office") {
         location.replace("user.html");
         return;
@@ -333,7 +264,6 @@
 <body>
   <div class="topbar">
     <div class="topbar-inner">
-
       <div class="brand">
         <div class="logos">
           <img class="logo" src="assets/images/psa.png" alt="PSA Logo">
@@ -350,10 +280,8 @@
           <span class="dot"></span>
           <span id="userEmail">user@example.gov.ph</span>
         </div>
-
         <button id="logoutBtn" class="logout-btn" type="button">Logout</button>
       </div>
-
     </div>
   </div>
 
@@ -376,8 +304,7 @@
       </div>
 
       <div class="grid">
-        <!-- LEFT UPDATE PANEL -->
-        <aside class="panel">
+        <aside class="panel" id="updatePanel">
           <h4>Update Record</h4>
 
           <div class="mini-card">
@@ -449,7 +376,6 @@
           </div>
         </aside>
 
-        <!-- RIGHT TABLE -->
         <div class="table-wrap">
           <table>
             <thead>
@@ -467,16 +393,13 @@
           </table>
         </div>
       </div>
-
     </section>
   </div>
 
   <script>
-    // show logged in email
     const emailEl = document.getElementById("userEmail");
     if (emailEl) emailEl.textContent = localStorage.getItem("email") || "";
 
-    // logout
     const logoutBtn = document.getElementById("logoutBtn");
     logoutBtn && logoutBtn.addEventListener("click", () => {
       localStorage.removeItem("email");
@@ -488,7 +411,6 @@
     });
   </script>
 
-  <!-- ✅ keep your office.js -->
-  <script src="assets/js/office.js?v=400" defer></script>
+  <script src="assets/js/office.js?v=600" defer></script>
 </body>
 </html>
